--- a/app/src/main/res/layout/activity_gato.xml
+++ b/app/src/main/res/layout/activity_gato.xml
@@ -116,7 +116,10 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_weight="0"
-        android:text="@string/tiempo" />
+        android:text="@string/tiempo"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <ProgressBar
         android:id="@+id/progressBar"
@@ -135,7 +138,10 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_weight="0"
-        android:text="@string/puntuacion_total" />
+        android:text="@string/puntuacion_total"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView_PuntuacionX"
@@ -144,7 +150,10 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_weight="0"
-        android:text="@string/puntuacion_x" />
+        android:text="@string/puntuacion_x"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView4_PuntuacionO"
@@ -153,7 +162,10 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_weight="0"
-        android:text="@string/puntuacion_o" />
+        android:text="@string/puntuacion_o"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
     <TextView
         android:id="@+id/textView_Empates"
@@ -162,6 +174,9 @@
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
         android:layout_weight="0"
-        android:text="@string/empates" />
+        android:text="@string/empates"
+        android:textColor="#000000"
+        android:textSize="16sp"
+        android:textStyle="bold" />
 
 </LinearLayout>
